--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
     "jest": "^29.7.0",
+    "kill-port": "^2.0.1",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "supertest": "^7.1.0",
@@ -35,7 +37,11 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "concurrently -k \"npm run backend\" \"npm run frontend\"",
+    "start:clean": "npx kill-port 3000 5173 && concurrently -k \"npm run backend\" \"npm run frontend\"",
+    "backend": "nodemon app.js",
+    "frontend": "cd frontend && npm run dev"
   },
   "keywords": [],
   "author": "",
