--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -9,6 +10,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.16.0",
     "node-cron": "^4.1.1",
+    "nodemailer": "^7.0.4",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
