--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
+    "chrono-node": "^2.8.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
