--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^7.0.4",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
