--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.16.0",
     "node-cron": "^4.1.1",
