--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^9.2.0"
   },
   "dependencies": {
-    "dotenv": "^17.0.1"
+    "dotenv": "^17.0.1",
+    "express-rate-limit": "^8.0.1"
   }
 }
