--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
+    "prebuild": "echo VITE_API_URL=$VITE_API_URL",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
